--- a/app/views/line_items/creaate.js.erb
+++ b/app/views/line_items/creaate.js.erb
@@ -1,1 +1,3 @@
-$('#cart').html('<%= escape_javascipt render(@cart) %>;')
+$('#cart').html('<%= escape_javascipt render(@cart) %>;');
+
+$('#current_item').css({'background-color': '#88ff88'}).animate({'background-color':'#114411'}, 1000);
