--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
   </div>
   <div id="columns">
     <div id="side">
-      <div id="cart">
-        <%= render @cart %>
-      </div>
-      
+  <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+    <%= render @cart %>
+  <% end %>
+
       <ul>
         <li><a href="http">Home</a></li>
         <li><a href="http">Questions</a></li>
