--- a/app/views/order_notifier/shipped.text.erb
+++ b/app/views/order_notifier/shipped.text.erb
@@ -1,3 +1,9 @@
-OrderNotifier#shipped
+<h3>Order Shipped</h3>
+<p>
+  This is to let you know that we've shipped your recent order:
+</p>
 
-<%= @greeting %>, find me in app/views/app/views/order_notifier/shipped.text.erb
+<table>
+  <tr><th colspan="2">Qty</th><th>Description</th></tr>
+  <%= render @order.line_items -%>
+</table>
